--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -102,7 +102,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -155,7 +155,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -208,7 +208,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -261,7 +261,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -314,7 +314,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -367,7 +367,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -420,7 +420,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -473,7 +473,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -526,7 +526,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -579,7 +579,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
@@ -632,7 +632,7 @@
                                     <span class="teacher-name fw-bold" id="teacher_name">Angela Yu</span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
-                                    <img src="./image/calendar-time.svg" alt="" style="width: 20px;height:20px;">
+                                    <img src="./calendar-time.svg" alt="" style="width: 20px;height:20px;">
                                     <span class="exam-date" id="exam_date">2023-10-20 (09:00 - 11:00) </span>
                                 </div>
                                 <div class="d-flex justify-content-start align-items-center gap-3 mt-2">
