--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                 </div>
                             </div>
                             <div class="group-4 mt-3">
-                                <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
+                                <div class="row">
                                     <button class="btn btn-outline-primary">Exam Questions</button>
                                     <button class="btn btn-outline-primary">Set Examinee</button>
                                     <button class="btn btn-outline-primary">Exam Result</button>
@@ -111,7 +111,7 @@
                                 </div>
                             </div>
                             <div class="group-4 mt-3">
-                                <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
+                                <div class="row">
                                     <button class="btn btn-outline-primary">Exam Questions</button>
                                     <button class="btn btn-outline-primary">Set Examinee</button>
                                     <button class="btn btn-outline-primary">Exam Result</button>
@@ -164,7 +164,7 @@
                                 </div>
                             </div>
                             <div class="group-4 mt-3">
-                                <div class="d-flex justify-content-between align-items-center flex-wrap gap-2">
+                                <div class="row">
                                     <button class="btn btn-outline-primary">Exam Questions</button>
                                     <button class="btn btn-outline-primary">Set Examinee</button>
                                     <button class="btn btn-outline-primary">Exam Result</button>
